Convert "CountOperationTest" unit test to use native CQL driver (#672)